--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                         <button class="sort-btn" data-sort="author" title="Sort by Author">
                             <i class="fas fa-user"></i>
                         </button>
+                        <button class="sort-btn" data-sort="plays" title="Sort by Play Count">
+                            <i class="fas fa-headphones"></i>
+                        </button>
                     </div>
                 </div>
             </div>
